tests/error/enum_defined3.gw
// [contains] already declared
 enum
{
	first
} blackhole;
